hass: Add persistence for hass models

--- a/apps/home-assistant/values.yaml
+++ b/apps/home-assistant/values.yaml
@@ -395,8 +395,7 @@ app-template:
             - path: /conf
     whisper:
       enabled: true
-      type: emptyDir
-      sizeLimit: 5Gi
+      existingClaim: home-assistant-models
       advancedMounts:
         whisper:
           whisper:
