--- a/apps/immich/values.yaml
+++ b/apps/immich/values.yaml
@@ -70,6 +70,9 @@ app-template:
       strategy: RollingUpdate
       pod:
         <<: *pod
+        # runtimeClassName: nvidia
+        # labels:
+        #   pod-cleaner.dbcloud.org/watch: "true"
       containers:
         main:
           image: *image
@@ -83,18 +86,18 @@ app-template:
             requests:
               cpu: 10m
               memory: 128Mi
-              nvidia.com/gpu: "1"
+              # nvidia.com/gpu: "1"
             limits:
               cpu: "10"
               memory: 20Gi
-              nvidia.com/gpu: "1"
+              # nvidia.com/gpu: "1"
     ml:
       strategy: RollingUpdate
       pod:
         <<: *pod
         # runtimeClassName: nvidia
         # labels:
-        #   runtime-class: nvidia
+        #   pod-cleaner.dbcloud.org/watch: "true"
       containers:
         main:
           image:
