--- a/apps/jellyfin/values.yaml
+++ b/apps/jellyfin/values.yaml
@@ -8,7 +8,7 @@ app-template:
         enableServiceLinks: false
         runtimeClassName: nvidia
         labels:
-          runtime-class: nvidia
+          pod-cleaner.dbcloud.org/watch: "true"
       containers:
         jellyfin:
           image:
