ollama: Add pod-cleaner label

--- a/apps/ollama/values.yaml
+++ b/apps/ollama/values.yaml
@@ -39,6 +39,9 @@ ollama:
       memory: 12Gi
 
   runtimeClassName: nvidia
+
+  podLabels:
+    pod-cleaner.dbcloud.org/watch: "true"
   podSecurityContext:
     allowPrivilegeEscalation: false
     readOnlyRootFilesystem: true
