--- a/apps/open-webui/values.yaml
+++ b/apps/open-webui/values.yaml
@@ -11,6 +11,17 @@ open-webui:
     limits:
       memory: 2Gi
 
+  pipelines:
+    enabled: true
+    affinity:
+      nodeAffinity:
+        requiredDuringSchedulingIgnoredDuringExecution:
+          nodeSelectorTerms:
+            - matchExpressions:
+                - key: app.kubernetes.io/instance
+                  operator: In
+                  values:
+                    - open-webui
   websocket:
     # -- Enables websocket support in Open WebUI with env `ENABLE_WEBSOCKET_SUPPORT`
     enabled: true
@@ -29,7 +40,7 @@ open-webui:
           requiredDuringSchedulingIgnoredDuringExecution:
             nodeSelectorTerms:
               - matchExpressions:
-                  - key: app.kubernetes.io/name
+                  - key: app.kubernetes.io/instance
                     operator: In
                     values:
                       - open-webui
