open-webui: Add WEBUI_URL config

--- a/apps/open-webui/values.yaml
+++ b/apps/open-webui/values.yaml
@@ -57,6 +57,8 @@ open-webui:
     existingClaim: open-webui-data
 
   extraEnvVars:
+    - name: WEBUI_URL
+      value: https://open-webui.grigri.cloud
     - name: ENABLE_SIGNUP
       value: "false"
     - name: ENABLE_OAUTH_SIGNUP
