open-webui: Add WEBUI_SECRET_KEY

--- a/apps/open-webui/templates/external-secrets.yaml
+++ b/apps/open-webui/templates/external-secrets.yaml
@@ -22,3 +22,7 @@ spec:
       remoteRef:
         key: /open-webui/pipelines
         property: api-key
+    - secretKey: WEBUI_SECRET_KEY
+      remoteRef:
+        key: /open-webui/webui
+        property: secret-key
