--- a/apps/ollama/values.yaml
+++ b/apps/ollama/values.yaml
@@ -33,10 +33,10 @@ ollama:
 
   resources:
     requests:
-      cpu: 200m
-      memory: 5Gi
+      cpu: 10m
+      memory: 20Mi
     limits:
-      memory: 12Gi
+      memory: 2Gi
 
   runtimeClassName: nvidia
 
