hass: Add OPENAI_BASE_URL config

--- a/apps/home-assistant/values.yaml
+++ b/apps/home-assistant/values.yaml
@@ -25,6 +25,7 @@ app-template:
                   name: home-assistant.home-assistant-postgres.credentials.postgresql.acid.zalan.do
                   key: password
             ZZ_DB_URL: "postgresql://$(POSTGRES_USER):$(POSTGRES_PASSWORD)@home-assistant-postgres/home_assistant"
+            OPENAI_BASE_URL: https://open-webui.grigri.cloud/api/v1/
           probes:
             liveness:
               enabled: true
