--- a/apps/home-assistant/values.yaml
+++ b/apps/home-assistant/values.yaml
@@ -25,9 +25,7 @@ app-template:
                   name: home-assistant.home-assistant-postgres.credentials.postgresql.acid.zalan.do
                   key: password
             ZZ_DB_URL: "postgresql://$(POSTGRES_USER):$(POSTGRES_PASSWORD)@home-assistant-postgres/home_assistant"
-          envFrom:
-            - secretRef:
-                name: hass-env
+            OPENAI_BASE_URL: http://open-webui.open-webui.svc/api/
           probes:
             liveness:
               enabled: true
