vault: Add OIDC configuration

--- a/platform/vault/templates/vault.yaml
+++ b/platform/vault/templates/vault.yaml
@@ -162,6 +162,13 @@ spec:
   # Marks presence of Istio, which influences things like port namings
   istioEnabled: false
 
+  envsConfig:
+    - name: OIDC_CLIENT_SECRET
+      valueFrom:
+        secretKeyRef:
+          name: vault-secrets
+          key: OIDC_CLIENT_SECRET
+
   externalConfig:
     policies:
       - name: allow_secrets
@@ -174,6 +181,17 @@ spec:
           }
 
     auth:
+      - type: oidc
+        path: oidc
+        options:
+          listing_visibility: "unauth"
+        config:
+          oidc_discovery_url: https://idm.grigri.cloud/oauth2/openid/vault
+          oidc_client_id: vault
+          oidc_client_secret: "${env `OIDC_CLIENT_SECRET`}"
+          default_role: admin
+          jwt_supported_algs:
+            - ES256
       - type: kubernetes
         config:
             # uses vault Service Account
