--- a/platform/vault/templates/vault.yaml
+++ b/platform/vault/templates/vault.yaml
@@ -282,6 +282,7 @@ spec:
               country: "ES"
               locality: "Madrid"
               province: "Madrid"
+              exported: internal
           roles:
             - name: internal-certificates-grigri-iot
               allow_localhost: false
