--- a/platform/vault/templates/vault.yaml
+++ b/platform/vault/templates/vault.yaml
@@ -170,16 +170,6 @@ spec:
           key: OIDC_CLIENT_SECRET
 
   externalConfig:
-    policies:
-      - name: allow_secrets
-        rules: path "secret/*" {
-          capabilities = ["create", "read", "update", "delete", "list"]
-          }
-      - name: allow_iot_pki
-        rules: path "pki/iot/*" {
-          capabilities = ["create", "read", "update", "delete", "list"]
-          }
-
     auth:
       - type: oidc
         path: oidc
@@ -303,3 +293,81 @@ spec:
               province: "Madrid"
               allowed_domains_template: false
               issuer_ref: "default"
+    policies:
+      - name: allow_secrets
+        rules: |-
+          path "secret/*" {
+            capabilities = ["create", "read", "update", "delete", "list"]
+          }
+      - name: allow_iot_pki
+        rules: |-
+          path "pki/iot/*" {
+            capabilities = ["create", "read", "update", "delete", "list"]
+          }
+      - name: admin
+        rules: |-
+          # Read system health check
+          path "sys/health"
+          {
+            capabilities = ["read", "sudo"]
+          }
+
+          # Create and manage ACL policies broadly across Vault
+
+          # List existing policies
+          path "sys/policies/acl"
+          {
+            capabilities = ["list"]
+          }
+
+          # Create and manage ACL policies
+          path "sys/policies/acl/*"
+          {
+            capabilities = ["create", "read", "update", "delete", "list", "sudo"]
+          }
+
+          # Enable and manage authentication methods broadly across Vault
+
+          # Manage auth methods broadly across Vault
+          path "auth/*"
+          {
+            capabilities = ["create", "read", "update", "delete", "list", "sudo"]
+          }
+
+          # Create, update, and delete auth methods
+          path "sys/auth/*"
+          {
+            capabilities = ["create", "update", "delete", "sudo"]
+          }
+
+          # List auth methods
+          path "sys/auth"
+          {
+            capabilities = ["read"]
+          }
+
+          # Enable and manage the key/value secrets engine at `secret/` path
+
+          # List, create, update, and delete key/value secrets
+          path "secret/*"
+          {
+            capabilities = ["create", "read", "update", "delete", "list", "sudo"]
+          }
+
+          # List, create, update, and delete key/value secrets
+          path "pki/*"
+          {
+            capabilities = ["create", "read", "update", "delete", "list", "sudo"]
+          }
+
+          # Manage secrets engines
+          path "sys/mounts/*"
+          {
+            capabilities = ["create", "read", "update", "delete", "list", "sudo"]
+          }
+
+          # List existing secrets engines.
+          path "sys/mounts"
+          {
+            capabilities = ["read"]
+          }
