minio: Add ingress-bandwidth limitation
It will start working when upgrade to Cilium 1.18

--- a/apps/cross-backups/values.yaml
+++ b/apps/cross-backups/values.yaml
@@ -53,6 +53,10 @@ minio:
           - *hostMC
         secretName: mc-s3-tls-certificate
 
+  podAnnotations:
+    # Until 1.18.0 is released, this annotation is ignored by Cilium
+    kubernetes.io/ingress-bandwidth: "100M"
+
   resources:
     requests:
       memory: 2Gi
