--- a/system/external-dns/values.yaml
+++ b/system/external-dns/values.yaml
@@ -1,7 +1,8 @@
 external-dns:
   interval: 2m
   # logLevel: debug
-  provider: cloudflare
+  provider:
+    name: cloudflare
   env:
     - name: CF_API_TOKEN
       valueFrom:
