--- a/apps/cross-backups/values.yaml
+++ b/apps/cross-backups/values.yaml
@@ -18,13 +18,12 @@ minio:
       external-dns.alpha.kubernetes.io/enabled: "true"
       external-dns.alpha.kubernetes.io/target: grigri.cloud
       cert-manager.io/cluster-issuer: letsencrypt-prod-dns
-      nginx.ingress.kubernetes.io/proxy-send-timeout: "86400"
-      nginx.ingress.kubernetes.io/proxy-connect-timeout: "86400"
-      nginx.ingress.kubernetes.io/proxy-read-timeout: "86400"
+      nginx.ingress.kubernetes.io/proxy-send-timeout: "3601"
+      nginx.ingress.kubernetes.io/proxy-read-timeout: "3601"
       # fix timeouts uploading big files disabling proxy buffering
       nginx.ingress.kubernetes.io/proxy-buffering: "off"
       nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
-      nginx.ingress.kubernetes.io/proxy-body-size: 1000G
+      nginx.ingress.kubernetes.io/proxy-body-size: "0"
       # https://min.io/docs/minio/linux/integrations/setup-nginx-proxy-with-minio.html
       nginx.ingress.kubernetes.io/server-snippet: |
         ignore_invalid_headers off;
