--- a/apps/home-assistant/rules/custom.yaml
+++ b/apps/home-assistant/rules/custom.yaml
@@ -18,7 +18,7 @@
     severity: warning
 - alert: VacuumCleaningRequired
   # Vacuum robot needs around 45 minutes for cleaning the main rooms.
-  expr: sum(sum_over_time(hass_binary_sensor_state{entity="binary_sensor.valetudo_cleaning"}[1w])) > 45
+  expr: sum(sum_over_time(hass_binary_sensor_state{entity="binary_sensor.valetudo_cleaning"}[1w])) < 45
   annotations:
     description: |
       Vacuum robot is not cleaning the main rooms since the last 7 days.
