zfs-localpv: Add nodeSelector for amd64

--- a/system/zfs-localpv/templates/deployment-backup-gc.yaml
+++ b/system/zfs-localpv/templates/deployment-backup-gc.yaml
@@ -56,4 +56,5 @@ spec:
       serviceAccount: openebs-zfs-controller-sa
       serviceAccountName: openebs-zfs-controller-sa
       terminationGracePeriodSeconds: 30
-
+      nodeSelector:
+        kubernetes.io/arch: amd64
