smartctl: Add blue book rules

--- a/system/monitoring/kustomization.yaml
+++ b/system/monitoring/kustomization.yaml
@@ -36,6 +36,7 @@ resources:
   - resources/pfsense-darkstat-scrape-config.yaml
   - resources/pfsense-node-exporter-dashboard-configmap.yaml
   - resources/pfsense-node-exporter-scrape-config.yaml
+  - resources/smartctl-exporter-prometheus-rules.yaml
   - resources/smartctl-exporter-dashboard-configmap.yaml
   - resources/smartctl-exporter-prometheus-rules.yaml
   - resources/temperature-dashboard-configmap.yaml
