--- a/metal/playbooks/install/cluster.yml
+++ b/metal/playbooks/install/cluster.yml
@@ -14,8 +14,8 @@
 - name: Label Kubernetes nodes
   ansible.builtin.import_playbook: k8s-node-labels.yml
 
-- name: Setup Etcd backups
-  ansible.builtin.import_playbook: backup-etcd.yml
+- name: Setup cron backups
+  ansible.builtin.import_playbook: backups.yml
 
 - name: Setup democratic-csi user
   ansible.builtin.import_playbook: democratic-csi-user.yml
